--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
 .App {
   text-align: center;
 }
@@ -35,4 +36,154 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Nav {
+  width: 100%;
+  height: 6vw;
+  background-color: #ffffff;
+}
+
+.Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15vh;
+  background-color: rgb(203, 48, 48);
+  left: 0;  
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.Container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5vh;
+  background-color: rgb(203, 48, 48);
+  left: 0;  
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.Footer {
+  width: 100%;
+  height: 3vw;
+  background-color: #ffffff;
+}
+
+.Font {
+  font-family: 'Righteous', cursive;
+  font-size: 2vw;
+  color: #ffffff;
+  text-align: center;
+  margin-top :0vw;
+}
+
+.Font2 {
+  font-family: 'Righteous', cursive;
+  font-size: 2vw;
+  color: #ffffff;
+  margin-top :0vw;
+  margin-right: 70vw;
+  
+}
+
+.Container3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15vh;
+  background-color: rgb(255, 255, 255);
+  left: 0;  
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+}
+
+.BsBell {
+  font-size: 2vw;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom : 40vw;
+}
+
+.Inprogress {
+  font-family: 'Righteous', cursive;
+  font-size: 2vw;
+  color: #ffffff;
+  text-align: left;
+  margin-bottom : 40vw;
+}
+
+.rectangle {
+  width: 35vw; 
+  height: 45vw; 
+  background-color: #ffffff; 
+  border: 2px solid #b09999;
+  border-radius: 15px;
+  margin-right: 45vw;
+}
+
+.image {
+  width: 10vw;
+  height: 10vw;
+  background-color: #ffffff; 
+  border: 3px solid #010101;
+  border-radius: 15px;
+  margin-right: 45vw;
+  margin-left: 1vw;
+  margin-top: 1vw;
+}
+
+.description {
+  width: 33vw;
+  height: 22vw;
+  background-color: #ffffff; 
+  border: 3px solid #010101;
+  border-radius: 15px;
+  margin-right: 45vw;
+  margin-left: 1vw;
+  margin-top: 0vw;
+}
+
+.title {
+  width: 22vw;
+  height: 10vw;
+  background-color: #ffffff; 
+  border: 3px solid #010101;
+  border-radius: 15px;
+  margin-right: 45vw;
+  margin-left: 11vw;
+  margin-top: 0vw;
+}
+
+.progress {
+  width: 33vw;
+  height: 10vw;
+  background-color: #ffffff; 
+  border: 3px solid #010101;
+  border-radius: 15px;
+  margin-right: 35vw;
+  margin-left: 1vw;
+  margin-top: 0vw;
+
+}
+
+
+
+.Container4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(203, 48, 48);
+  left: 0;  
+  right: 0;
+  top: 0;
+  bottom: 0;
+  
 }
