--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .body {
   background-color: #dc143c;
+  min-height: 100vh;
 }
 
 .top-rank-course, .common-col, .newest-col {
@@ -47,4 +48,16 @@
 
 .NavbarTop {
   margin-bottom: 20px;
+}
+
+.form {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin: 16px;
+  
+  flex: 1;
+
 }
