--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.body {
+  background-color: #dc143c;
   min-height: 100vh;
+}
+
+.top-rank-course, .common-col, .newest-col {
+  border: 1px solid #fff;
+  background-color: #fff;
+  height: 550px;
+  border-spacing: 30px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+}
+
+
+.cart-container {
+  border: 1px solid #fff;
+  background-color: #fff;
+  height: 550px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.incart-container {
+  background-color: #b3b3b3;
+  height: 450px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+
+}
+
+.header-mycourse {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.inprogress-col, .complete-col,.expired-col  {
+  border: 1px solid #fff;
+  background-color: #fff;
+  height: 550px;
+  border-radius: 8px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NavbarLink {
+  margin-bottom: 20px;
+}
+
+.NavbarTop {
+  margin-bottom: 20px;
+}
+
+.form {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin: 16px;
+  flex: 1;
+}
+
+.week-col, .month-col, .year-col {
+  background-color: #fff;
+  border: 1px solid #fff;
+  height: 550px;
+  border-radius: 8px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
