--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -1,50 +1,57 @@
 .container {
-    
-    border: 1px solid black;
-    background-color: aqua;
+  border: 1px solid black;
+  background-color: aqua;
 }
 
 .body {
-    border: 1px solid black;
-    margin: 30px;
+  border: 1px solid black;
+  margin: 30px;
 }
 
 .ct1 {
-    width: 700px;
-    height: 400px;
-    border: 1px solid black;
-    margin-bottom: 40px;
-    background-color: whitesmoke;   
+  width: 700px;
+  height: 400px;
+  border: 1px solid black;
+  margin-bottom: 40px;
+  background-color: whitesmoke;
 }
 
 .ct2 {
-    width: 700px;
-    height: 400px;
-    border: 1px solid black;
-    background-color: whitesmoke; 
+  width: 700px;
+  height: 400px;
+  border: 1px solid black;
+  background-color: whitesmoke;
 }
 
 .ct3 {
-    margin-top: -22.2cm;
-    margin-left: 800px;
-    width: 600px;
-    height: 900px;
-    border: 1px solid black;
-    background-color: whitesmoke;  
+  margin-top: -22.2cm;
+  margin-left: 800px;
+  width: 800px;
+  height: 900px;
+  border: 1px solid black;
+  background-color: whitesmoke;
 }
-.payment{
-    text-align: center;
-    margin: 40px;
-    border: 1px solid black;
-    height: 800px;
+.payment {
+  text-align: center;
+  margin: 40px;
+  border: 1px solid black;
+  height: 800px;
 }
 .confirm {
-    border: 1px solid black;
-    margin-top: 720px;
+  border: 1px solid black;
+  margin-top: 720px;
 }
-.ct1_1{
-    /* padding: 10px; */
-    margin: 30px;
-    padding: 20px;
-    border: 1px solid black;
+.ct1_1 {
+  /* padding: 10px; */
+  border-radius: 20px;
+  margin: 30px;
+  padding: 20px;
+  border: 1px solid black;
+}
+.ct1_2 {
+  width: 320px;
+  margin: 30px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 20px; 
 }
