--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -46,7 +46,7 @@
   border-radius: 20px;
   margin: 30px;
   padding: 20px;
-  border: 1px solid black;
+  border: 1px solid rgb(98, 35, 35);
 }
 .ct1_2 {
   width: 320px;
@@ -55,3 +55,18 @@
   border: 1px solid black;
   border-radius: 20px; 
 }
+.input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+}
+
+.test {
+  border: 1px solid black;
+  margin: 10px;
+  width: 280px;
+  border-radius: 20px;
+  padding: 10px; 
+}
+
