--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,3 +102,22 @@
   border-radius: 8px;
 }
 
+.course-info {
+  border: 1px solid #fff;
+  background-color: #fff;
+  height: 550px;
+  border-spacing: 30px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.course-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
