--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -14,6 +14,7 @@
   border: 1px solid black;
   margin-bottom: 40px;
   background-color: whitesmoke;
+  border-radius: 20px; 
 }
 
 .ct2 {
@@ -21,6 +22,9 @@
   height: 400px;
   border: 1px solid black;
   background-color: whitesmoke;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 20px; 
 }
 
 .ct3 {
@@ -30,6 +34,7 @@
   height: 900px;
   border: 1px solid black;
   background-color: whitesmoke;
+  border-radius: 20px; 
 }
 .payment {
   text-align: center;
@@ -69,4 +74,17 @@
   border-radius: 20px;
   padding: 10px; 
 }
-
+.input {
+  margin: 5px;
+  width: 400px;
+  border-radius: 20px;
+  border: 1px solid black;
+}
+.totalPrice{
+  border: 1px solid black;
+  border-radius: 20px;
+  width: 400px;
+  margin-top: 5cm;
+  margin-left: 28px;
+  padding: 20px;
+}
