--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -1,10 +1,10 @@
 .container {
   border: 1px solid black;
-  background-color: aqua;
+  background-color: #dc143c;
 }
 
 .body {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 30px;
 }
 
@@ -41,11 +41,14 @@
   margin: 40px;
   border: 1px solid black;
   height: 800px;
+  border-radius: 20px;
+  font-size: 50px;
 }
 .confirm {
   border: 1px solid black;
-  margin-top: 720px;
+  margin-top: 470px;
 }
+
 .ct1_1 {
   /* padding: 10px; */
   border-radius: 20px;
@@ -84,7 +87,7 @@
   border: 1px solid black;
   border-radius: 20px;
   width: 400px;
-  margin-top: 5cm;
-  margin-left: 28px;
-  padding: 20px;
+  margin-top: -2.8cm;
+  margin-left: 250px;
+  padding: 15px;
 }
