--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -45,8 +45,8 @@
   font-size: 50px;
 }
 .confirm {
-  border: 1px solid black;
-  margin-top: 470px;
+  /* border: 1px solid black; */
+  margin-top: 450px;
 }
 
 .ct1_1 {
