--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -11,7 +11,7 @@
 .ct1 {
   width: 700px;
   height: 400px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-bottom: 40px;
   background-color: whitesmoke;
   border-radius: 20px; 
@@ -20,7 +20,7 @@
 .ct2 {
   width: 700px;
   height: 400px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: whitesmoke;
   border: 1px solid black;
   padding: 20px;
@@ -32,7 +32,7 @@
   margin-left: 800px;
   width: 800px;
   height: 900px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: whitesmoke;
   border-radius: 20px; 
 }
