--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,3 +150,10 @@
   margin-right: 10px;
   margin-bottom: 10px;
 }
+.no-course-message {
+  font-size: 18px; 
+}
+
+.total-price {
+  font-size: 18px; 
+}
