--- a/client/src/css/LoginCss.module.css
+++ b/client/src/css/LoginCss.module.css
@@ -32,6 +32,12 @@
     color: white;
 }
 
+.choice {
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+
 .form {
     background-color: rgba(255, 255, 255, 0.05);
     border-radius: 0.5rem;
@@ -41,3 +47,9 @@
     margin: 16px;
     flex: 1;
   }
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
