--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -1,30 +1,28 @@
 .container {
   border: 1px solid black;
-  background-color: #dc143c;
+  background-color: #ff2121;
+  border-radius: 20px; 
 }
 
 .body {
-  /* border: 1px solid black; */
   margin: 30px;
 }
 
 .ct1 {
   width: 700px;
   height: 400px;
-  /* border: 1px solid black; */
   margin-bottom: 40px;
   background-color: whitesmoke;
-  border-radius: 20px; 
+  border-radius: 20px;
 }
 
 .ct2 {
   width: 700px;
   height: 400px;
-  /* border: 1px solid black; */
   background-color: whitesmoke;
   border: 1px solid black;
   padding: 20px;
-  border-radius: 20px; 
+  border-radius: 20px;
 }
 
 .ct3 {
@@ -32,10 +30,10 @@
   margin-left: 800px;
   width: 670px;
   height: 900px;
-  /* border: 1px solid black; */
   background-color: whitesmoke;
-  border-radius: 20px; 
+  border-radius: 20px;
 }
+
 .payment {
   text-align: center;
   margin: 40px;
@@ -44,31 +42,31 @@
   border-radius: 20px;
   font-size: 50px;
 }
+
 .confirm {
-  /* border: 1px solid black; */
   margin-top: 130px;
-  
 }
 
 .ct1_1 {
-  /* padding: 10px; */
   border-radius: 20px;
   margin: 30px;
   padding: 20px;
   border: 1px solid rgb(98, 35, 35);
 }
+
 .ct1_2 {
   width: 320px;
   margin: 30px;
   padding: 20px;
   border: 1px solid black;
-  border-radius: 20px; 
+  border-radius: 20px;
 }
+
 .input {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px; 
+  border-radius: 5px;
 }
 
 .test {
@@ -76,15 +74,17 @@
   margin: 10px;
   width: 280px;
   border-radius: 20px;
-  padding: 10px; 
+  padding: 10px;
 }
+
 .input {
   margin: 5px;
   width: 400px;
   border-radius: 20px;
   border: 1px solid black;
 }
-.totalPrice{
+
+.totalPrice {
   border: 1px solid black;
   border-radius: 20px;
   width: 400px;
@@ -92,14 +92,16 @@
   margin-left: 250px;
   padding: 15px;
 }
-.no_cart{
+
+.no_cart {
   font-size: 20px;
   margin: 20px;
 }
-.choosebank{
-  /* border: 1px solid black; */
+
+.choosebank {
   margin-bottom: 70px;
 }
-.choosebank img{
+
+.choosebank img {
   margin: 25px;
 }
