--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,3 +168,8 @@
   margin-bottom: 20px;
   margin-right: 20px;
 }
+
+.overflow-scroll {
+  overflow-y: auto; /* Adds vertical scrollbar */
+  max-height: 500px;
+}
