--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,9 @@
   min-height: 100vh;
 }
 
-
-.top-rank-course, .common-col, .newest-col {
+.top-rank-course,
+.common-col,
+.newest-col {
   border: 1px solid #fff;
   background-color: #fff;
   height: fit-content;
@@ -19,7 +20,9 @@
   justify-content: space-between;
 }
 
-.inprogress-col, .complete-col,.expired-col  {
+.inprogress-col,
+.complete-col,
+.expired-col {
   border: 1px solid #fff;
   background-color: #fff;
   height: fit-content;
@@ -37,7 +40,9 @@
   margin-bottom: 20px;
 }
 
-.week-col, .month-col, .year-col {
+.week-col,
+.month-col,
+.year-col {
   border: 1px solid #fff;
   background-color: #fff;
   height: fit-content;
@@ -52,8 +57,7 @@
   border-radius: 8px;
   height: 400px;
   justify-content: center;
-  height: 100%; 
-
+  height: 100%;
 }
 
 .pay-but {
@@ -71,23 +75,30 @@
   margin-right: 20px;
 }
 
-.item-cart, .price-cart {
+.item-cart,
+.price-cart {
   background-color: #d8d6d6;
   height: fit-content;
   border-radius: 8px;
 }
 
-.item-top, .item-common, .item-newest {
+.item-top,
+.item-common,
+.item-newest {
   height: fit-content;
   border-radius: 8px;
 }
 
-.item-inpro, .item-complete, .item-expired {
+.item-inpro,
+.item-complete,
+.item-expired {
   height: fit-content;
   border-radius: 8px;
 }
 
-.item-week, .item-month, .item-year {
+.item-week,
+.item-month,
+.item-year {
   height: fit-content;
   border-radius: 8px;
 }
@@ -131,7 +142,9 @@
   justify-content: right;
 }
 
-.header-toprank, .header-common, .header-newest {
+.header-toprank,
+.header-common,
+.header-newest {
   font-family: "Righteous", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -139,19 +152,21 @@
   margin-top: 10px;
 }
 
-.fire-image, .common-image, .newest-image {
+.fire-image,
+.common-image,
+.newest-image {
   margin-right: 10px;
   margin-bottom: 10px;
 }
 .no-course-message {
-  font-size: 18px; 
+  font-size: 18px;
 }
 
 .total-price {
-  font-size: 18px; 
+  font-size: 18px;
 }
 
-.syllabus-col{
+.syllabus-col {
   border: 1px solid #fff;
   background-color: #fff;
   height: 550px;
@@ -161,7 +176,7 @@
   margin-right: 20px;
 }
 
-.courseData-col{
+.courseData-col {
   border: 1px solid #fff;
   background-color: #fff;
   height: 550px;
@@ -172,10 +187,9 @@
 }
 
 .overflow-y-scroll {
-  overflow-y: auto; 
-  max-height: 500px; 
+  overflow-y: auto;
+  max-height: 500px;
 }
-
 
 .payment-button {
   display: flex;
@@ -209,19 +223,27 @@
 .cart-container {
   margin-top: 20px;
 }
+
 .vertical-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
+
 .custom-link {
-  color: #000000; 
+  color: #000000;
   text-decoration: none;
-  transition: color 0.3s ease; 
-  
+  transition: color 0.3s ease;
 }
 
 .custom-link:hover {
   color: #0056b3;
+}
+
+.progressBar {
+  margin-top: 20px;
+}
+
+.progressBar .progress-bar {
+  background-color: #007bff;
 }
