--- a/client/src/App.css
+++ b/client/src/App.css
@@ -345,8 +345,8 @@
 
 
 .cssload-box-loading {
-  width: 49px;
-  height: 49px;
+  width: 100px;
+  height: 100px;
   margin: auto;
   position: absolute;
   left: 0;
@@ -356,12 +356,12 @@
 }
 .cssload-box-loading:before {
   content: '';
-  width: 49px;
-  height: 5px;
+  width: 70px;
+  height: 7px;
   background: #000000;
   opacity: 0.1;
   position: absolute;
-  top: 58px;
+  top: 78px;
   left: 0;
   border-radius: 50%;
   animation: shadow 0.58s linear infinite;
@@ -372,12 +372,13 @@
 }
 .cssload-box-loading:after {
   content: '';
-  width: 49px;
-  height: 49px;
-  background: #fff;
+  width: 70px;
+  height: 70px;
+  background: url("../public/logo.png");
+  background-size: contain;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0px;
   border-radius: 3px;
   animation: cssload-animate 0.58s linear infinite;
   -o-animation: cssload-animate 0.58s linear infinite;
@@ -385,95 +386,116 @@
   -webkit-animation: cssload-animate 0.58s linear infinite;
   -moz-animation: cssload-animate 0.58s linear infinite;
 }
+
 @keyframes cssload-animate {
+  0%{
+    transform: translateY(0) rotate(0deg);
+  }
   17% {
-    border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 10px;
   }
   25% {
-    transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    transform: translateY(9px) rotate(45deg);
     border-bottom-right-radius: 39px;
   }
+  50% {
+    transform: translateY(18px) scale(1, 0.9) rotate(67.5deg);
+  }
   75% {
-    transform: translateY(9px) rotate(67.5deg);
+    transform: translateY(9px) rotate(45deg);
+    border-bottom-right-radius: 39px;
   }
   100% {
-    transform: translateY(0) rotate(90deg);
-  }
+    transform: translateY(0) rotate(0deg);
+  } 
 }
 @-o-keyframes cssload-animate {
+  0%{
+    -o-transform: translateY(0) rotate(0deg);
+  }
   17% {
-    border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 10px;
   }
   25% {
-    -o-transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    -o-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    -o-transform: translateY(9px) rotate(45deg);
     border-bottom-right-radius: 39px;
   }
+  50% {
+    -o-transform: translateY(18px) scale(1, 0.9) rotate(67.5deg);
+  }
   75% {
-    -o-transform: translateY(9px) rotate(67.5deg);
+    -o-transform: translateY(9px) rotate(45deg);
+    border-bottom-right-radius: 39px;
   }
   100% {
-    -o-transform: translateY(0) rotate(90deg);
-  }
+    -o-transform: translateY(0) rotate(0deg);
+  } 
 }
 @-ms-keyframes cssload-animate {
+  0%{
+    -ms-transform: translateY(0) rotate(0deg);
+  }
   17% {
-    border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 10px;
   }
   25% {
-    -ms-transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    -ms-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    -ms-transform: translateY(9px) rotate(45deg);
     border-bottom-right-radius: 39px;
   }
+  50% {
+    -ms-transform: translateY(18px) scale(1, 0.9) rotate(67.5deg);
+  }
   75% {
-    -ms-transform: translateY(9px) rotate(67.5deg);
+    -ms-transform: translateY(9px) rotate(45deg);
+    border-bottom-right-radius: 39px;
   }
   100% {
-    -ms-transform: translateY(0) rotate(90deg);
-  }
+    -ms-transform: translateY(0) rotate(0deg);
+  } 
 }
 @-webkit-keyframes cssload-animate {
+  0%{
+    -webkit-transform: translateY(0) rotate(0deg);
+  }
   17% {
-    border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 10px;
   }
   25% {
-    -webkit-transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    -webkit-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    -webkit-transform: translateY(9px) rotate(45deg);
     border-bottom-right-radius: 39px;
   }
+  50% {
+    -webkit-transform: translateY(18px) scale(1, 0.9) rotate(67.5deg);
+  }
   75% {
-    -webkit-transform: translateY(9px) rotate(67.5deg);
+    -webkit-transform: translateY(9px) rotate(45deg);
+    border-bottom-right-radius: 39px;
   }
   100% {
-    -webkit-transform: translateY(0) rotate(90deg);
-  }
+    -webkit-transform: translateY(0) rotate(0deg);
+  } 
 }
 @-moz-keyframes cssload-animate {
+  0%{
+    -moz-transform: translateY(0) rotate(0deg);
+  }
   17% {
-    border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 10px;
   }
   25% {
-    -moz-transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    -moz-transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    -moz-transform: translateY(9px) rotate(45deg);
     border-bottom-right-radius: 39px;
   }
+  50% {
+    -moz-transform: translateY(18px) scale(1, 0.9) rotate(67.5deg);
+  }
   75% {
-    -moz-transform: translateY(9px) rotate(67.5deg);
+    -moz-transform: translateY(9px) rotate(45deg);
+    border-bottom-right-radius: 39px;
   }
   100% {
-    -moz-transform: translateY(0) rotate(90deg);
-  }
+    -moz-transform: translateY(0) rotate(0deg);
+  } 
 }
 @keyframes shadow {
   0%,
