--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,10 +106,9 @@
 .course-info {
   border: 1px solid #fff;
   background-color: #fff;
-  height: 550px;
+  height: fit-content;
   border-spacing: 30px;
   border-radius: 8px;
-  margin-bottom: 20px;
   margin-right: 20px;
   display: flex;
   flex-direction: column;
