--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,14 +95,14 @@
 .item-inpro,
 .item-complete,
 .item-expired {
-  height: fit-content;
+  height: 400px;
   border-radius: 8px;
 }
 
 .item-week,
 .item-month,
 .item-year {
-  height: fit-content;
+  height: 400px;
   border-radius: 8px;
 }
 
@@ -155,6 +155,15 @@
   font-style: normal;
   margin-left: 10px;
   margin-top: 15px;
+}
+.header-cart {
+  font-family: "Righteous", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .fire-image,
