--- a/client/src/App.css
+++ b/client/src/App.css
@@ -379,7 +379,7 @@
   width: 70px;
   height: 7px;
   background: #000000;
-  opacity: 0.1;
+  opacity: 0.2;
   position: absolute;
   top: 78px;
   left: 0;
@@ -746,3 +746,23 @@
   text-align: center;
 }
 
+
+.error-col {
+  border: 1px solid #fff;
+  background-color: #fff;
+  height: 400px;
+  border-spacing: 30px;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.seose{
+  font-size: 10rem;
+}
+
+.NotFond{
+  font-size: 3rem;
+}
