--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,6 +155,7 @@
   font-style: normal;
   margin-left: 10px;
   margin-top: 15px;
+  text-align: flex;
 }
 .header-cart {
   font-family: "Righteous", sans-serif;
@@ -695,7 +696,7 @@
 }
 
 .search-bar-input :focus {
-  border-color: rgb(247, 54, 44);
+  border-color: rgb(251, 234, 233);
   box-shadow: 0 0 5px rgb(247, 54, 44);
 }
 
