--- a/client/src/css/Student.module.css
+++ b/client/src/css/Student.module.css
@@ -14,3 +14,26 @@
     color: rgb(255, 255, 255);
     border-radius: 15px;
   }
+
+.container {
+    width: 960px;
+    margin: 0 auto;
+}
+
+/* Tablet styles */
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+        padding: 0 20px;
+    }
+}
+
+/* Mobile styles */
+@media (max-width: 480px) {
+    .container {
+        width: 100%;
+        padding: 0 10px;
+    }
+}
+
+              
