--- a/client/src/App.css
+++ b/client/src/App.css
@@ -792,3 +792,28 @@
 .inpro-card {
   margin-bottom: 10px;
 }
+
+.menu-header {
+  margin-left: 15px;
+}
+
+.logout-img {
+  margin-left: 15px;
+  margin-right: 5px;
+  margin-top: 5px;
+  height: 30px;
+  width: 30px;
+}
+
+.profile-img {
+  margin-left: 15px;
+  margin-right: 5px;
+  margin-top: 5px;
+  height: 30px;
+  width: 30px;
+}
+
+.menu-items {
+  border-bottom: 2px solid #000;
+  margin-bottom: 30px;
+}
