--- a/client/src/css/RegisterCss.module.css
+++ b/client/src/css/RegisterCss.module.css
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     margin-left: 100px;
+    margin-top: 50px;
     padding: 20px;
     border: 2px solid #fff;
 }
