--- a/client/src/App.css
+++ b/client/src/App.css
@@ -914,14 +914,14 @@
 }
 
 .profile-info {
-  height: 300px;
+  height: 370px;
   border-radius: 8px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   background-color: #fff;
 }
 
 .mycourse-col {
-  height: 200px;
+  height: 160px;
   border-radius: 8px;
   background-color: #fff;
 }
@@ -961,3 +961,11 @@
   margin-top: 200px;
 }
 
+.edit-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.personal-form {
+
+}
