--- a/client/src/App.css
+++ b/client/src/App.css
@@ -966,6 +966,34 @@
   width: 40px;
 }
 
-.personal-form {
+.study-con {
+  background-color: rgba(248, 123, 123, 0.5);
+  border-radius: 8px;
+  margin-top: 30px;
+  max-width: 90%;
+  height: 580px;
+}
 
+.main-study {
+  border: 1px solid #fff;
+  margin-left: 20px;
+  border-radius: 8px;
+}
+
+.main-video {
+  background-color: #fff;
+  border-radius: 8px;
+  display: flex;
+  margin-left: 20px;
+  margin-top: 15px;
+  height: 400px;
+}
+
+.video-list {
+  background-color: #fff;
+  border-radius: 8px;
+  display: flex;
+  margin-left: 10px;
+  margin-right: 20px;
+  height: 540px;
 }
