--- a/client/src/App.css
+++ b/client/src/App.css
@@ -980,6 +980,13 @@
   border-radius: 8px;
 }
 
+.Card-course-study{
+  background-color: #fff;
+  border-radius: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .main-video {
   background-color: #fff;
   border-radius: 8px;
@@ -993,9 +1000,38 @@
   background-color: #fff;
   border-radius: 8px;
   display: flex;
+  justify-content: center;
   margin-left: 15px;
   margin-right: 20px;
   height: 540px;
+}
+
+.save-pro-Btn {
+  height: 50px;
+  width: 50px;
+}
+
+.data-text {
+  margin: 0;
+  margin-top: 5px;
+  margin-left: 20px;
+}
+
+.col-md-8 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: auto; /* To center horizontally */
+  margin-right: auto; /* To center horizontally */
+
+}
+
+.progressbar-data {
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 @media only screen and (max-width: 400px) {
