--- a/client/src/css/PayCss.module.css
+++ b/client/src/css/PayCss.module.css
@@ -7,21 +7,31 @@
 .orderCol {
   border-radius: 8px;
   width: 50%;
-  margin-right: 15px;
-  height: fit-content;
+  margin-right: 20px;
+  height: 300px;
+  border:  1px solid #fff;
 }
 
 .orderCard {
   justify-content: center;
-  margin-top: 15px;
+  margin-top: 10px;
   margin-left: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .paymentMethod {
   border-radius: 8px;
   width: 50%;
   margin-right: 15px;
+  border:  1px solid #fff;
+
+}
+
+.formCon {
+  border: 1px solid #fff;
+  border-radius: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .methodCon {
@@ -63,13 +73,14 @@
   background-color: #fff;
   width: 50%;
   margin-left: 50%;
-  margin-top: 15px;
+  margin-top: 0px;
   padding: 10px;
 }
 
 .InfoInput {
-  margin-top: 5px;
+  margin-top: 30px;
   margin-bottom: 10px;
+  border-radius: 8px;
 }
 
 .order-list {
@@ -78,8 +89,9 @@
 }
 
 .orderListContainer {
-  height: 350px; /* Set a fixed height for the container */
+  height: 300px; /* Set a fixed height for the container */
   overflow-y: auto; /* Enable vertical scrolling */
   scrollbar-width: thin;
+  margin-bottom: 10px;
 }
 
